fix: no scrollbar

--- a/style.css
+++ b/style.css
@@ -5,13 +5,19 @@
   --darkBlue: hsl(218, 44%, 22%);
 }
 
+html,
 body {
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
   background-color: var(--lightGray);
   font-family: 'Poppins', sans-serif;
   color: var(--grayishBlue);
   display: flex;
+  height: 100%;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -23,10 +29,10 @@ main h3 {
 }
 
 main {
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   max-width: 300px;
+  max-height: 600px;
   background-color: var(--white);
   border-radius: 15px;
   padding: 15px;
